Fixed overflow issue on npdcHome

--- a/src/layouts/home/npdcHome.scss
+++ b/src/layouts/home/npdcHome.scss
@@ -34,6 +34,13 @@ $anim-speed: .4s;
 
 //** END OF PAGE CONFIGURATIONS **\\
 
+[ng-app="npdcHome"]
+{
+	body
+	{
+		overflow:					auto;
+	}
+}
 
 .npdc-home
 {
